--- a/css/all.css
+++ b/css/all.css
@@ -434,13 +434,13 @@ img {
 }
 
 .dialogBox .dialog_cnt_01 .innerBox span {
-  width: 90px;
+  width: 120px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
   text-align: right;
   font-weight: bold;
   color: #869bae;
   margin-right: 6px;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
 }
 
 .dialogBox .dialog_cnt_01 .innerBox .iptBox {
@@ -471,7 +471,6 @@ img {
 }
 
 .dialogBox .dialog_cnt_01 .innerBox .iptBox .selectBox {
-  width: 140px;
   height: 100%;
   padding: 0 15px;
   -ms-flex-negative: 0;
@@ -497,6 +496,7 @@ img {
 .dialogBox .dialog_cnt_01 .innerBox .iptBox .selectBox select {
   width: 100%;
   height: 100%;
+  padding-right: 25px;
   color: #fff;
   background: transparent;
   outline: none;
@@ -1454,22 +1454,22 @@ body {
   display: flex;
 }
 
-.header .hd_top .hd_signIn label span {
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
-  font-weight: bold;
-  letter-spacing: 1px;
-  font-size: 0.95rem;
-}
-
 .header .hd_top .hd_signIn label input {
   width: 100%;
   height: 100%;
-  padding-left: 10px;
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
   color: #c5c5c5;
+  font-size: 1rem;
   background: transparent;
   outline: none;
   border: none;
+}
+
+.header .hd_top .hd_signIn label input::-webkit-input-placeholder {
+  font-size: 1rem;
+  font-weight: bold;
 }
 
 .header .hd_top .hd_signIn .signIn_msg {
@@ -1519,7 +1519,7 @@ body {
 }
 
 .header .hd_top .signIn_code label {
-  width: 105px;
+  width: 95px;
   margin-right: 5px;
 }
 
@@ -1531,10 +1531,13 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
 }
 
 .header .hd_top .signIn_btn .btn {
   min-width: 80px;
+  padding: 0 5px;
 }
 
 .header .hd_top .signIn_btn .btn + .btn {
@@ -3206,8 +3209,16 @@ body {
 }
 
 .broadcast .liveBox .liveTitle {
-  width: 150px;
-  padding: 5px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.broadcast .liveBox .liveTitle > div {
+  padding: 10px;
   margin: 0 auto 20px;
   border-radius: 10px;
   font-weight: bold;
@@ -3215,21 +3226,13 @@ body {
   background-color: #fff;
   color: #000;
   display: inline-block;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
 .broadcast .liveBox .liveTitle img {
-  width: 66px;
-  padding-bottom: 3px;
+  width: 70px;
+  padding-bottom: 5px;
+  display: block;
+  margin: auto;
 }
 
 .broadcast .liveBox .liveList {
@@ -3307,8 +3310,9 @@ body {
 }
 
 .broadcast .liveBox .liveBtn .btn {
-  width: 150px;
+  min-width: 150px;
   height: 40px;
+  padding: 0 20px;
   line-height: 40px;
   border-radius: 40px;
 }
