--- a/css/_main.scss
+++ b/css/_main.scss
@@ -132,18 +132,17 @@ body {
                 align-items: center;
                 border-radius: 5px;
                 display: flex;
-                span {
-                    flex-shrink: 0;
-                    font-weight: bold;
-                    letter-spacing: 1px;
-                    font-size: 0.95rem;
-                }
                 input {
                     width: 100%;
                     height: 100%;
-                    padding-left: 10px;
-                    color: $color_01;
+                    order: 1;
+                    color: $color_01; 
+                    font-size: 1rem;     
                     @include fullNone;
+                    &::-webkit-input-placeholder{
+                        font-size: 1rem;
+                        font-weight: bold;
+                    }
                 }
             }
             .signIn_msg {
@@ -174,11 +173,11 @@ body {
                 }
             }
         }
-        .signIn_code {
+        .signIn_code {   
             margin-right: 10px;
             display: flex;
             label {
-                width: 105px;
+                width: 95px;
                 margin-right: 5px;
             }
             .nbCode {
@@ -187,8 +186,10 @@ body {
         }
         .signIn_btn {
             display: flex;
+            flex-shrink: 0;
             .btn {
                 min-width: 80px;
+                padding: 0 5px;
             }
             .btn+.btn {
                 margin-left: 5px;
