--- a/css/_newsRef.scss
+++ b/css/_newsRef.scss
@@ -41,7 +41,7 @@
             line-height: 28px;
             span{
                 font-weight: bold;
-                display: block;
+                display: inline-block;
             }
             p+p{
                 margin-top: 10px;
