--- a/css/all.css
+++ b/css/all.css
@@ -131,7 +131,7 @@ img {
   }
 }
 
-.swipslider .sw-slides {
+.sw-slides {
   display: block;
   padding: 0;
   list-style: none;
@@ -145,7 +145,7 @@ img {
   bottom: 0;
 }
 
-.swipslider .sw-slide {
+.sw-slide {
   width: 100%;
   height: 100%;
   margin: auto;
@@ -153,7 +153,7 @@ img {
   position: relative;
 }
 
-.swipslider .sw-slide .sw-content {
+.sw-slide .sw-content {
   width: 100%;
   height: 100%;
   margin-left: 0;
@@ -161,7 +161,7 @@ img {
   font-size: 14px;
 }
 
-.swipslider .sw-slide > img {
+.sw-slide > img {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -326,7 +326,7 @@ img {
   right: 0;
 }
 
-.dialogBox .dialog_cnt_01 {
+.dialog_cnt_01 {
   width: 100%;
   max-width: 779px;
   margin: auto;
@@ -341,11 +341,11 @@ img {
   display: none;
 }
 
-.dialogBox .dialog_cnt_01.on {
+.dialog_cnt_01.on {
   display: block;
 }
 
-.dialogBox .dialog_cnt_01 .close {
+.dialog_cnt_01 .close {
   width: 38px;
   height: 38px;
   z-index: 1;
@@ -355,7 +355,7 @@ img {
   cursor: pointer;
 }
 
-.dialogBox .dialog_cnt_01 .close::before, .dialogBox .dialog_cnt_01 .close::after {
+.dialog_cnt_01 .close::before, .dialog_cnt_01 .close::after {
   content: "";
   width: 100%;
   height: 1px;
@@ -368,27 +368,27 @@ img {
   background-color: #818b99;
 }
 
-.dialogBox .dialog_cnt_01 .close::before {
+.dialog_cnt_01 .close::before {
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
 }
 
-.dialogBox .dialog_cnt_01 .close::after {
+.dialog_cnt_01 .close::after {
   -webkit-transform: rotate(-45deg);
           transform: rotate(-45deg);
 }
 
-.dialogBox .dialog_cnt_01 .close:active::before, .dialogBox .dialog_cnt_01 .close:active::after {
+.dialog_cnt_01 .close:active::before, .dialog_cnt_01 .close:active::after {
   background-color: #ffd200;
 }
 
 @media (any-hover: hover) {
-  .dialogBox .dialog_cnt_01 .close:hover::before, .dialogBox .dialog_cnt_01 .close:hover::after {
+  .dialog_cnt_01 .close:hover::before, .dialog_cnt_01 .close:hover::after {
     background-color: #ffd200;
   }
 }
 
-.dialogBox .dialog_cnt_01 .title {
+.dialog_cnt_01 .title {
   padding-bottom: 21px;
   margin-bottom: 47px;
   color: #e9b21a;
@@ -399,7 +399,7 @@ img {
   position: relative;
 }
 
-.dialogBox .dialog_cnt_01 .title::before {
+.dialog_cnt_01 .title::before {
   content: "";
   width: 100%;
   height: 2px;
@@ -413,13 +413,13 @@ img {
   border-radius: 50%;
 }
 
-.dialogBox .dialog_cnt_01 .innerBox {
+.dialog_cnt_01 .innerBox {
   width: 100%;
   max-width: 485px;
   margin: auto;
 }
 
-.dialogBox .dialog_cnt_01 .innerBox > div {
+.dialog_cnt_01 .innerBox > div {
   height: 35px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -433,7 +433,7 @@ img {
   margin-bottom: 31px;
 }
 
-.dialogBox .dialog_cnt_01 .innerBox span {
+.dialog_cnt_01 .innerBox span {
   width: 120px;
   -ms-flex-negative: 0;
       flex-shrink: 0;
@@ -443,7 +443,7 @@ img {
   margin-right: 6px;
 }
 
-.dialogBox .dialog_cnt_01 .innerBox .iptBox {
+.dialog_cnt_01 .innerBox .iptBox {
   width: 100%;
   max-width: 390px;
   height: 100%;
@@ -459,7 +459,7 @@ img {
           align-items: center;
 }
 
-.dialogBox .dialog_cnt_01 .innerBox .iptBox input {
+.dialog_cnt_01 .innerBox .iptBox input {
   width: 100%;
   height: 100%;
   background: transparent;
@@ -470,7 +470,7 @@ img {
   font-size: 1rem;
 }
 
-.dialogBox .dialog_cnt_01 .innerBox .iptBox .selectBox {
+.dialog_cnt_01 .innerBox .iptBox .selectBox {
   height: 100%;
   padding: 0 15px;
   -ms-flex-negative: 0;
@@ -481,7 +481,7 @@ img {
   position: relative;
 }
 
-.dialogBox .dialog_cnt_01 .innerBox .iptBox .selectBox::before {
+.dialog_cnt_01 .innerBox .iptBox .selectBox::before {
   content: "";
   width: 1px;
   height: calc(100% - 10px);
@@ -493,7 +493,7 @@ img {
   left: 0;
 }
 
-.dialogBox .dialog_cnt_01 .innerBox .iptBox .selectBox select {
+.dialog_cnt_01 .innerBox .iptBox .selectBox select {
   width: 100%;
   height: 100%;
   padding-right: 25px;
@@ -510,18 +510,18 @@ img {
   cursor: pointer;
 }
 
-.dialogBox .dialog_cnt_01 .innerBox .iptBox .selectBox option {
+.dialog_cnt_01 .innerBox .iptBox .selectBox option {
   height: 32px;
   line-height: 32px;
   background-color: #193452;
 }
 
-.dialogBox .dialog_cnt_01 .innerBox .codeBox {
+.dialog_cnt_01 .innerBox .codeBox {
   width: 120px;
   margin-left: 10px;
 }
 
-.dialogBox .dialog_cnt_01 .check_cnt {
+.dialog_cnt_01 .check_cnt {
   color: #626262;
   font-size: 1rem;
   letter-spacing: 1px;
@@ -533,17 +533,17 @@ img {
           align-items: center;
 }
 
-.dialogBox .dialog_cnt_01 .check_cnt a {
+.dialog_cnt_01 .check_cnt a {
   color: #00a0e9;
   font-weight: bold;
 }
 
-.dialogBox .dialog_cnt_01 .ckBox {
+.dialog_cnt_01 .ckBox {
   margin-right: 10px;
   cursor: pointer;
 }
 
-.dialogBox .dialog_cnt_01 .ckBox > div {
+.dialog_cnt_01 .ckBox > div {
   width: 25px;
   height: 25px;
   background: #100f1f;
@@ -552,11 +552,11 @@ img {
   border-radius: 5px;
 }
 
-.dialogBox .dialog_cnt_01 .ckBox input {
+.dialog_cnt_01 .ckBox input {
   display: none;
 }
 
-.dialogBox .dialog_cnt_01 .ckBox input:checked + div {
+.dialog_cnt_01 .ckBox input:checked + div {
   background: url(../images/icon/icon-tick.png) no-repeat center/90%;
 }
 
@@ -3888,7 +3888,7 @@ body {
 
 .newsRef_cnt .newsRef_txt li span {
   font-weight: bold;
-  display: block;
+  display: inline-block;
 }
 
 .newsRef_cnt .newsRef_txt li p + p {
