--- a/css/_page.scss
+++ b/css/_page.scss
@@ -270,7 +270,9 @@
         .news_main {
             .news_mainImg {
                 width: 750px;
+                height: 410px;
                 position: relative;
+                background: no-repeat center top /cover;
                 margin-right: 20px;
                 flex-shrink: 0;
                 p {
@@ -283,7 +285,7 @@
             }
         }
         .news_list {
-            height: 412px;
+            height: 410px;
             .newsList_cnt {
                 height: 100%;
                 overflow-y: scroll;
@@ -292,6 +294,8 @@
                 display: flex;
                 .newsList_img {
                     width: 100px;
+                    height: 66px;
+                    background: no-repeat center top /cover;
                     flex-shrink: 0;
                 }
                 p {
@@ -314,6 +318,12 @@
 
         li {
             flex: 1;
+            .img{
+                width: 100%;
+                height: 0;
+                padding-bottom: 80%;  
+                background: no-repeat center top/cover;
+            }
             p {
                 padding-top: 10px;
                 color: #000;
