--- a/css/all.css
+++ b/css/all.css
@@ -2976,14 +2976,18 @@ body {
 }
 
 .mainRec .recCount .list > div {
+  height: calc(50% - 5px);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   color: #000;
+  background-color: #0af;
 }
 
 .mainRec .recCount .list .listImg {
   width: calc(50% - 10px);
+  height: 100%;
+  background: #000 no-repeat center top/cover;
   -ms-flex-negative: 0;
       flex-shrink: 0;
 }
