--- a/css/_resources.scss
+++ b/css/_resources.scss
@@ -22,11 +22,16 @@
         }
         li {
             width: calc(100% / 6);
-            height: 55px;
-            line-height: 55px;
-            text-align: center;
+            min-height: 55px;
+            padding: 0 10px;
+            display: flex;
+            align-items: center;
             cursor: pointer;
             transition: 0.3s;
+            a{
+                @include txtChip(2);
+                line-height: 22px;
+            }
             &:active {
                 background-color: #adbfdf;
             }
