--- a/css/all.css
+++ b/css/all.css
@@ -4448,12 +4448,28 @@ body {
 
 .resourcesBox .resList-list li {
   width: calc(100% / 6);
-  height: 55px;
-  line-height: 55px;
-  text-align: center;
+  min-height: 55px;
+  padding: 0 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   cursor: pointer;
   -webkit-transition: 0.3s;
   transition: 0.3s;
+}
+
+.resourcesBox .resList-list li a {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  white-space: normal;
+  line-height: 22px;
 }
 
 .resourcesBox .resList-list li:active {
