--- a/css/all.css
+++ b/css/all.css
@@ -4450,18 +4450,22 @@ body {
   width: calc(100% / 6);
   min-height: 55px;
   padding: 0 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   cursor: pointer;
   -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
 .resourcesBox .resList-list li a {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.resourcesBox .resList-list li span {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
