--- a/css/_resources.scss
+++ b/css/_resources.scss
@@ -24,11 +24,15 @@
             width: calc(100% / 6);
             min-height: 55px;
             padding: 0 10px;
-            display: flex;
-            align-items: center;
+           
             cursor: pointer;
             transition: 0.3s;
             a{
+                height: 100%;    
+                display: flex;
+                align-items: center;
+            }
+            span{
                 @include txtChip(2);
                 line-height: 22px;
             }
