--- a/css/all.css
+++ b/css/all.css
@@ -3138,6 +3138,9 @@ body {
 
 .fullList li .fullList_img {
   width: 260px;
+  height: 0;
+  padding-bottom: 13%;
+  background: no-repeat center /cover;
   -ms-flex-negative: 0;
       flex-shrink: 0;
 }
