--- a/css/_page.scss
+++ b/css/_page.scss
@@ -271,6 +271,7 @@
             .news_mainImg {
                 width: 750px;
                 height: 410px;
+                overflow: hidden;
                 position: relative;
                 background: no-repeat center top /cover;
                 margin-right: 20px;
