--- a/css/_dialog.scss
+++ b/css/_dialog.scss
@@ -11,6 +11,7 @@
     display: none;
     &.on {
         display: flex;
+        animation: dialogBox .5s forwards;
     }
     & > .close {
         width: 100%;
@@ -18,6 +19,7 @@
         background-color: rgba(0, 0, 0, 0.8);
         position: absolute;
         @include pos(tblr, 0);
+      
     }
     @at-root .dialog_cnt_01 {
         width: 100%;
@@ -98,13 +100,15 @@
                 justify-content: flex-end;
                 margin-bottom: 31px;
             }
-            span {
+            span{
                 width: 120px;
+                padding-right: 5px;
                 flex-shrink: 0;
                 text-align: right;
                 font-weight: bold;
                 color: #869bae;
                 margin-right: 6px;
+                position: relative;
             }
             .iptBox {
                 width: 100%;
@@ -412,10 +416,10 @@
             }
         }
         .todayGame_actor{
-            width: 90%;
+            width: 75%;
             margin: auto;
             position: absolute;
-            @include pos(bl,-13%,-50%);
+            @include pos(bl,-10%,-40%);
             z-index: 1;  
         }
         .firework{
@@ -501,4 +505,9 @@
         transform: scale(2);
         opacity: 1;
     }
+}
+
+@keyframes dialogBox{
+    0%{opacity: 0;}
+    100%{opacity: 1;}
 }
