--- a/css/_main.scss
+++ b/css/_main.scss
@@ -77,18 +77,18 @@ body {
                     height: 34px;
                 }
             }
-            li+li {
+            li + li {
                 margin-left: 10px;
             }
         }
         .hd_signIn {
-            &[data-signIn="0"]>div[data-signIn="0"] {
+            &[data-signIn="0"] > div[data-signIn="0"] {
                 display: flex;
             }
-            &[data-signIn="1"]>div[data-signIn="1"] {
+            &[data-signIn="1"] > div[data-signIn="1"] {
                 display: flex;
             }
-            &>div {
+            & > div {
                 display: none;
                 justify-content: flex-end;
             }
@@ -136,10 +136,10 @@ body {
                     width: 100%;
                     height: 100%;
                     order: 1;
-                    color: $color_01; 
-                    font-size: 1rem;     
+                    color: $color_01;
+                    font-size: 1rem;
                     @include fullNone;
-                    &::-webkit-input-placeholder{
+                    &::-webkit-input-placeholder {
                         font-size: 1rem;
                         font-weight: bold;
                     }
@@ -149,7 +149,7 @@ body {
                 display: flex;
                 color: $clr_Txt;
                 font-size: 0.9rem;
-                &>div {
+                & > div {
                     display: flex;
                     align-items: center;
                     margin-right: 10px;
@@ -173,7 +173,7 @@ body {
                 }
             }
         }
-        .signIn_code {   
+        .signIn_code {
             margin-right: 10px;
             display: flex;
             label {
@@ -191,7 +191,7 @@ body {
                 min-width: 80px;
                 padding: 0 5px;
             }
-            .btn+.btn {
+            .btn + .btn {
                 margin-left: 5px;
             }
         }
@@ -232,7 +232,7 @@ body {
                 }
             }
         }
-        li+li {
+        li + li {
             margin-left: 75px;
         }
         .menu_game {
@@ -272,7 +272,7 @@ body {
                     max-width: 1050px;
                     cursor: pointer;
                 }
-                &>div {
+                & > div {
                     max-width: 1050px;
                     height: 35px;
                     padding: 0 15px;
@@ -297,12 +297,12 @@ body {
                 }
             }
         }
-        &>.contBox-min {
+        & > .contBox-min {
             padding: 0;
             display: flex;
             flex-direction: column;
             position: relative;
-            &>.flexAd {
+            & > .flexAd {
                 padding: 0 20px;
             }
         }
@@ -363,7 +363,7 @@ body {
             }
         }
         .floatAd {
-            &>img {
+            & > img {
                 display: block;
                 margin-bottom: 10px;
             }
@@ -437,7 +437,7 @@ body {
     // ft_top
     .ft_top {
         background-color: #313131;
-        &>div {
+        & > div {
             width: 100%;
             max-width: 1800px;
             min-width: $count-minW;
@@ -455,7 +455,7 @@ body {
             ul {
                 display: flex;
             }
-            li+li {
+            li + li {
                 margin-left: 20px;
             }
             .ft_icon {
@@ -467,7 +467,7 @@ body {
     // ft_bottom
     .ft_bottom {
         background-color: #121210;
-        &>div {
+        & > div {
             max-width: 1800px;
             min-width: $count-minW;
             min-height: calc(275px - 160px);
@@ -485,7 +485,7 @@ body {
                 display: flex;
                 align-items: flex-end;
                 font-size: 1rem;
-                font-weight: bold;       
+                font-weight: bold;
             }
             li {
                 transition: 0.3s;
@@ -498,7 +498,7 @@ body {
                     }
                 }
             }
-            li+li {
+            li + li {
                 margin-left: 30px;
             }
         }
@@ -513,7 +513,7 @@ body {
         z-index: 5;
         display: flex;
         justify-content: space-between;
-        &>div {
+        & > div {
             position: relative;
             pointer-events: auto;
             &.on {
@@ -570,7 +570,7 @@ body {
     &.on {
         display: flex;
     }
-    &>div {
+    & > div {
         width: 100px;
         height: 100px;
         background-color: #fff;
@@ -602,5 +602,76 @@ body {
     }
     100% {
         transform: scaleX(1);
+    }
+}
+
+.loading {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 50;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    display: none;
+    &.on {
+        display: flex;
+    }
+    &::before{
+        content: 'loading...';
+        margin: auto;
+        color: #fff;
+        position: absolute;
+        @include pos(tbrl,0);
+        font-size: 1.4rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        opacity: 0.5;
+        animation: load_txt 2s linear infinite;
+    }
+
+    .load_round {
+        animation: load_round 1s linear infinite;
+        width: 160px;
+        height: 160px;
+        top: 20px;
+        left: 20px;
+        border-radius: 50%;
+        box-shadow: 0 4px 0 0 #fff;
+        transform-origin: 80px 82px;
+    }
+}
+
+@keyframes load_txt{
+    0%,100%{opacity: 0.5;}
+    50%{opacity: 1;}
+}
+
+@keyframes load_round {
+    0% {
+        transform: rotate(0deg);
+        box-shadow: 0 4px 0 0 #fff;
+    }
+    25% {
+        transform: rotate(90deg);
+        box-shadow: 0 4px 0 0 rgb(250, 85, 85);
+    }
+    50% {
+        transform: rotate(180deg);
+        box-shadow: 0 4px 0 0 rgb(77, 88, 243);
+    }
+    75% {
+        transform: rotate(270deg);
+        box-shadow: 0 4px 0 0 rgb(250, 253, 90);
+    }
+    100% {
+        transform: rotate(360deg);
+        box-shadow: 0 4px 0 0 #fff;
     }
 }
