--- a/css/_swipeslider.scss
+++ b/css/_swipeslider.scss
@@ -140,3 +140,21 @@
 .sw-bullet li:not(:last-child) {
     margin-right: 5px;
 }
+
+// =====================================================
+
+.mainCarousel {
+    width: 100%;
+    height: 0;
+    padding-bottom: calc(50% * 0.78);
+    position: relative;
+    overflow: hidden;
+    display: block;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+   .sw-bullet{
+       display: none;
+   }
+}
