--- a/css/_resources.scss
+++ b/css/_resources.scss
@@ -97,6 +97,7 @@
             color: #000;
             font-size: 1.1rem;
             cursor: pointer;
+            & a> div,
             & > div {
                 display: flex;
                 align-items: center;
