--- a/css/_page.scss
+++ b/css/_page.scss
@@ -323,6 +323,11 @@
         li+li {
             margin-left: 20px;
         }
+        .newsList_img {
+            height: 0;
+            padding-bottom: 65%;
+            background: no-repeat center/cover;
+        }
     }
 }
 
