--- a/css/all.css
+++ b/css/all.css
@@ -3116,6 +3116,12 @@ body {
   margin-left: 20px;
 }
 
+.mainNews_b .newsList_img {
+  height: 0;
+  padding-bottom: 65%;
+  background: no-repeat center/cover;
+}
+
 .mainScore .scoreCnt {
   width: 100%;
   height: 600px;
